# Meowtopia

./: .env.development  .gitignore  Dockerfile  Dockerfile.chain  Makefile  README.md  docker-compose.yml  entrypoint.sh  go.mod  mkdocs.yml  readme.md
app/: app.go  app_config.go  sim_test.go
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: .env.development  alembic.ini  main.py  settings.py
backend/app/core/: settings.py  urls.py  validators.py
backend/app/core/cafe/: views.py
backend/app/db/migrations/: __init__.py  env.py
backend/app/db/migrations/versions/: 0001_create_demo_table.py
backend/core/accounts/: urls.py  views.py
backend/core/cafe/: urls.py
backend/core/finance/: urls.py
cmd/chctokend/: main.go
cmd/chctokend/cmd/: commands.go  root.go  testnet.go  testnet_multi_node.go
docker/: Dockerfile.backend  Dockerfile.chain  Dockerfile.frontend  Meowtopia
docs/static/: openapi.yml
frontend/: .pnp.cjs  Dockerfile  entrypoint.sh  package.json  tsconfig.json  webpack.common.js
frontend/mobile/ios/: Package.swift  README.md
frontend/public/: admin.html  user.html  user.webmanifest
frontend/src/apps/: admin.tsx  user.tsx
frontend/src/apps/layouts/: App.tsx
frontend/web/: index.html  package.json  routes.tsx  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/web/policies/: cafe.md  cats.md  community.md  contact.md  content.md  cookies.md  faq.md  general.md  loyalty.md  marketing.md  privacy.md  refund.md  security.md  support.md
frontend/web/public/: .webmanifest
frontend/web/src/: index.tsx  routes.ts
frontend/web/src/layouts/: Navigation.tsx
frontend/web/src/modules/: Auth.tsx
frontend/webpack/: webpack.admin.js  webpack.user.js
x/chctoken/keeper/: genesis.go  genesis_test.go  keeper.go  keeper_test.go  msg_server.go  msg_update_params.go  msg_update_params_test.go  query.go  query_params.go  query_params_test.go
x/chctoken/module/: autocli.go  depinject.go  module.go  simulation.go
x/chctoken/types/: errors.go  genesis.pb.go  genesis_test.go  keys.go  module.pb.go  params.pb.go  query.pb.go  query.pb.gw.go  tx.pb.go
(+71 files in other folders)
